force-app/main/default/objects/Coface_Country__c/Coface_Country__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Coface的国家信息</description>
    <label>Coface Country</label>
</CustomObject>