force-app/main/default/objects/Coface_Country__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>国家名称</description>
    <label>Country Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>