force-app/main/default/objects/Coface_Country__c/fields/ISO_3__c.field-meta.xml
<CustomField>
    <fullName>ISO_3__c</fullName>
    <label>ISO-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>