force-app/main/default/objects/Coface_Country__c/fields/Special__c.field-meta.xml
<CustomField>
    <fullName>Special__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否是特殊国家，pdf和json是分开订购</description>
    <label>Special</label>
    <type>Checkbox</type>
</CustomField>